# docs/swagger.json
@@ -46,7 +46,7 @@
                 "tags": [
                     "Calendar"
                 ],
-                "summary": "To do create new election",
+                "summary": "To do create new calendar event",
                 "parameters": [
                     {
                         "description": "json req body",
@@ -90,7 +90,7 @@
                 "tags": [
                     "Calendar"
                 ],
-                "summary": "To do create new election",
+                "summary": "To do get data timeline",
                 "parameters": [
                     {
                         "description": "json req body",
@@ -442,7 +442,7 @@
                 "tags": [
                     "Property"
                 ],
-                "summary": "To do create new election",
+                "summary": "To do create new property",
                 "parameters": [
                     {
                         "description": "json req body",
@@ -459,6 +459,116 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/property/list": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Property"
+                ],
+                "summary": "List Property",
+                "parameters": [
+                    {
+                        "description": "payload",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.ListProperty"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "payload": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/response.List"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/property/page": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Property"
+                ],
+                "summary": "Page Property",
+                "parameters": [
+                    {
+                        "description": "payload",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.PageProperty"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "payload": {
+                                            "$ref": "#/definitions/response.Pagination"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "500": {
@@ -772,15 +882,51 @@
         "request.CreateProperty": {
             "type": "object",
             "required": [
-                "descriptionId",
+                "description",
                 "name"
             ],
             "properties": {
-                "descriptionId": {
+                "description": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "request.ListProperty": {
+            "type": "object",
+            "properties": {
+                "companyId": {
+                    "type": "string",
+                    "maxLength": 200
+                },
+                "description": {
+                    "type": "string",
+                    "maxLength": 200
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 200
+                }
+            }
+        },
+        "request.PageProperty": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "maxLength": 200
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 200
+                },
+                "page": {
+                    "type": "integer"
                 }
             }
         },
@@ -860,15 +1006,49 @@
         "request.UpdateProperty": {
             "type": "object",
             "required": [
-                "descriptionId",
+                "description",
                 "name"
             ],
             "properties": {
-                "descriptionId": {
+                "description": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "response.List": {
+            "type": "object",
+            "properties": {
+                "label": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.Pagination": {
+            "type": "object",
+            "properties": {
+                "dataPerPage": {
+                    "type": "integer"
+                },
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "type": "object"
+                    }
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "totalData": {
+                    "type": "integer"
+                },
+                "totalPage": {
+                    "type": "integer"
                 }
             }
         },
