# response/property.go
@@ -1,0 +1,5 @@
+package response
+
+import "github.com/jihanlugas/rental/model"
+
+type PageProperty []model.PropertyView
